src/sections/about/background.css
:root {
	--bg-lines-color: rgba(69, 69, 69, 0.05);
	--bg-block-color: hsla(239, 85%, 67%, 0.3);
	--bg-block-fade-in: 500ms;
	--bg-block-fade-out: 1s;
	--bg-block-hold: 0.25s;
	--bg-block-size: 64px;
	--bg-block-wave-color: var(--main-950);
	--bg-block-wave-border-color: hsla(45, 100%, 50%, 0.04);
	--bg-block-wave-border-width: 1px;
	--bg-block-wave-border-perimeter-width: 2px;
	--bg-block-wave-fade-in: 250ms;
	--bg-block-wave-fade-out: 400ms;
	--bg-block-wave-step: 40ms;
}

#about {
	position: relative;
}

#bg-container {
	width: 100%;
	height: 100%;
	position: fixed;
	inset: 0;
	z-index: 0;
	pointer-events: none;
	/* background-blend-mode: hue; */
	background-image:
		repeating-linear-gradient(
			45deg,
			var(--bg-lines-color) 0px,
			var(--bg-lines-color) 1px,
			transparent 1px,
			transparent 11px,
			var(--bg-lines-color) 11px,
			var(--bg-lines-color) 12px,
			transparent 12px,
			transparent 32px
		),
		repeating-linear-gradient(
			0deg,
			var(--bg-lines-color) 0px,
			var(--bg-lines-color) 1px,
			transparent 1px,
			transparent 11px,
			var(--bg-lines-color) 11px,
			var(--bg-lines-color) 12px,
			transparent 12px,
			transparent 32px
		),
		repeating-linear-gradient(
			135deg,
			var(--bg-lines-color) 0px,
			var(--bg-lines-color) 1px,
			transparent 1px,
			transparent 11px,
			var(--bg-lines-color) 11px,
			var(--bg-lines-color) 12px,
			transparent 12px,
			transparent 32px
		),
		repeating-linear-gradient(
			90deg,
			var(--bg-lines-color) 0px,
			var(--bg-lines-color) 1px,
			transparent 1px,
			transparent 11px,
			var(--bg-lines-color) 11px,
			var(--bg-lines-color) 12px,
			transparent 12px,
			transparent 32px
		),
		/* linear-gradient(50deg, rgba(15, 19, 53, 0.78), black); */
		/* linear-gradient(-30deg, rgba(15, 19, 53, 0.8), transparent 80%); */
		radial-gradient(circle at 80% 80%, rgba(15, 19, 53, 0.6) 0%, hsla(233, 51%, 20%, 0.4) 26%, rgba(0, 0, 0, 0) 58%);
}

#bg-blocks {
	width: 100%;
	position: absolute;
	top: 0;
	left: 0;
	z-index: 120;
	pointer-events: none;
	display: grid;
	overflow: hidden;
}
.bg-block {
	position: relative;
	pointer-events: none;
	--bg-block-border-top-width: var(--bg-block-wave-border-width);
	--bg-block-border-right-width: var(--bg-block-wave-border-width);
	--bg-block-border-bottom-width: var(--bg-block-wave-border-width);
	--bg-block-border-left-width: var(--bg-block-wave-border-width);
}

.bg-block.is-tl-edge-top {
	--bg-block-border-top-width: var(--bg-block-wave-border-perimeter-width);
}
.bg-block.is-tl-edge-right {
	--bg-block-border-right-width: var(--bg-block-wave-border-perimeter-width);
}
.bg-block.is-tl-edge-bottom {
	--bg-block-border-bottom-width: var(--bg-block-wave-border-perimeter-width);
}
.bg-block.is-tl-edge-left {
	--bg-block-border-left-width: var(--bg-block-wave-border-perimeter-width);
}

.bg-block::before,
.bg-block::after {
	content: '';
	position: absolute;
	inset: 0;
	opacity: 0;
	transition: opacity var(--bg-block-fade-out) ease-out;
}

.bg-block::before {
	background-color: var(--bg-block-wave-color);
	transition-duration: var(--bg-block-wave-fade-out);
	box-sizing: border-box;
	border-style: solid;
	border-color: var(--bg-block-wave-border-color);
	border-width: var(--bg-block-border-top-width) var(--bg-block-border-right-width) var(--bg-block-border-bottom-width)
		var(--bg-block-border-left-width);
}

.bg-block::after {
	background-color: var(--bg-block-color);
}

.bg-block.is-tl-lit::before {
	opacity: 1;
	transition-duration: var(--bg-block-wave-fade-in);
}

.bg-block.is-lit::after {
	opacity: 1;
	transition-duration: var(--bg-block-fade-in);
}

.bg-block.is-tl-lit.is-lit::before {
	border-color: transparent;
}

.bg-block.is-tl-lit.is-lit::after {
	box-sizing: border-box;
	border-style: solid;
	border-color: var(--bg-block-wave-border-color);
	border-width: var(--bg-block-border-top-width) var(--bg-block-border-right-width) var(--bg-block-border-bottom-width)
		var(--bg-block-border-left-width);
}

